--- a/index.html
+++ b/index.html
@@ -3,34 +3,27 @@
     <head>
         <title>Actividad enlaces.html</title>
         <meta charset="utf-8"/>
+    </head>
+    <body>
 	<a href="#Section1">Ir a sección 1</a> <br /> <!--te lleva a la seccion1-->
 	<a href="#Section2">Ir a sección 2</a> <br />
 	<a href="#Section3">Ir a sección de imagen</a> <br />
-    </head>
-    <body>
-	<section id="Section1">
-        	<h1> Sección 1 </h1>
-        	<a href="https://gamaverse.com/doomcraft-game/">Sección que me interesa</a> <br />
-        	<p>
-				Es una página web a la que voy cuando me aburro o para pasar el rato<br />
-				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam dignissimos blanditiis quod, quaerat, necessitatibus exercitationem omnis possimus voluptatibus culpa repudiandae sunt in libero, quae illum recusandae vero? Voluptate, numquam explicabo. <br />
-			</p>
-	</section>
+        <h1 id="Section1"> Sección 1 </h1>
+        <a href="https://gamaverse.com/doomcraft-game/">Sección que me interesa</a> <br />
+        <p>
+		Es una página web a la que voy cuando me aburro o para pasar el rato<br />
+		Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam dignissimos blanditiis quod, quaerat, necessitatibus exercitationem omnis possimus voluptatibus culpa repudiandae sunt in libero, quae illum recusandae vero? Voluptate, numquam explicabo. <br />
+	</p>
 	<hr />
-	<section id="Section2">
-		<h1> Sección 2 </h1>
-		<a href="Mundo Gaturro Pelicula Completa En Español Latino.mp4">Sección que me interesa</a> <br />
-		<p>
-			Es una película que veo cuando no hay nada que hacer en clase, <br />
-			2 ciclos despues aún no la he terminado de ver. <br />
-			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex eligendi nostrum sint consequuntur amet eos maiores, nihil voluptatibus, quidem dolor repellendus esse tempore architecto nesciunt accusantium cumque excepturi, distinctio aspernatur. <br />
-		</p>
-	</section>
+	<h1 id="Section2"> Sección 2 </h1>
+	<a href="Mundo Gaturro Pelicula Completa En Español Latino.mp4">Sección que me interesa</a> <br />
+	<p>
+		Es una película que veo cuando no hay nada que hacer en clase, <br />
+		2 ciclos despues aún no la he terminado de ver. <br />
+		Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex eligendi nostrum sint consequuntur amet eos maiores, nihil voluptatibus, quidem dolor repellendus esse tempore architecto nesciunt accusantium cumque excepturi, distinctio aspernatur. <br />
+	</p>
 	<hr />
-	<section id="#Section3">
-		<h3> Sección de imagen</h3>
-		<a href="IM_HAPPY.gif">Sección de imagen</a> <br />
-	</section>
-
+	<h3 id="Section3"> Sección de imagen</h3>
+	<a href="IM_HAPPY.gif">Sección de imagen</a> <br />
     </body>
 </html>
